--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "portfolio",
+  "homepage": "http://eseeve.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,7 +16,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "clean" : "gh-pages-clean",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": [
